--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,13 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    env: 
+      HOST: localhost
+      PORT: 5432
+      USER: root
+      PASSWORD: root
+      DBNAME: root
+      
     steps:
     - uses: actions/checkout@v3
 
